argocd/apps/media/plex/manifests/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
    - "plex.carsonanderson.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
